[gd_scene load_steps=36 format=3 uid="uid://c52ida6t3ojhh"]

[ext_resource type="Script" path="res://util/pause_menu.gd" id="1_0v7ca"]
[ext_resource type="Theme" uid="uid://b45jfhmer1vsa" path="res://assets/theme.tres" id="1_u4m4g"]
[ext_resource type="PackedScene" uid="uid://rv0thp4qvv0d" path="res://util/settings_container.tscn" id="3_ckuse"]
[ext_resource type="Texture2D" uid="uid://yon2eqldod7d" path="res://assets/sprites/tv_startup_spritesheet.png" id="3_skoxf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rss8y"]
bg_color = Color(0, 0, 0, 0.501961)

[sub_resource type="InputEventAction" id="InputEventAction_602pb"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_g7248"]
events = [SubResource("InputEventAction_602pb")]

[sub_resource type="InputEventAction" id="InputEventAction_0nobj"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_d77ke"]
events = [SubResource("InputEventAction_0nobj")]

[sub_resource type="AtlasTexture" id="AtlasTexture_2xosb"]
atlas = ExtResource("3_skoxf")
region = Rect2(672, 448, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo6ot"]
atlas = ExtResource("3_skoxf")
region = Rect2(336, 448, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_heppp"]
atlas = ExtResource("3_skoxf")
region = Rect2(0, 448, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_msyj1"]
atlas = ExtResource("3_skoxf")
region = Rect2(672, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwfmd"]
atlas = ExtResource("3_skoxf")
region = Rect2(336, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6quc"]
atlas = ExtResource("3_skoxf")
region = Rect2(0, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr0ps"]
atlas = ExtResource("3_skoxf")
region = Rect2(672, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbtnn"]
atlas = ExtResource("3_skoxf")
region = Rect2(336, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks37o"]
atlas = ExtResource("3_skoxf")
region = Rect2(0, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdl2v"]
atlas = ExtResource("3_skoxf")
region = Rect2(1008, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_bl7i5"]
atlas = ExtResource("3_skoxf")
region = Rect2(336, 672, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_loilx"]
atlas = ExtResource("3_skoxf")
region = Rect2(672, 672, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_6g4hf"]
atlas = ExtResource("3_skoxf")
region = Rect2(1008, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxvpx"]
atlas = ExtResource("3_skoxf")
region = Rect2(1008, 448, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk4po"]
atlas = ExtResource("3_skoxf")
region = Rect2(0, 672, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_no78g"]
atlas = ExtResource("3_skoxf")
region = Rect2(0, 672, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvghn"]
atlas = ExtResource("3_skoxf")
region = Rect2(0, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc68j"]
atlas = ExtResource("3_skoxf")
region = Rect2(336, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yq7k"]
atlas = ExtResource("3_skoxf")
region = Rect2(672, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcu0q"]
atlas = ExtResource("3_skoxf")
region = Rect2(0, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_bscm2"]
atlas = ExtResource("3_skoxf")
region = Rect2(336, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6adl"]
atlas = ExtResource("3_skoxf")
region = Rect2(672, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ifdw"]
atlas = ExtResource("3_skoxf")
region = Rect2(0, 448, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5fjy"]
atlas = ExtResource("3_skoxf")
region = Rect2(336, 448, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_on8ll"]
atlas = ExtResource("3_skoxf")
region = Rect2(672, 448, 336, 224)

[sub_resource type="SpriteFrames" id="SpriteFrames_0apyq"]
animations = [{
"frames": [{
"duration": 7.5,
"texture": SubResource("AtlasTexture_2xosb")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_eo6ot")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_heppp")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_msyj1")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_bwfmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6quc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr0ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbtnn")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ks37o")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_kdl2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl7i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loilx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g4hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl7i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loilx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g4hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl7i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loilx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g4hf")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_oxvpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk4po")
}],
"loop": false,
"name": &"transition_in",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_no78g")
}, {
"duration": 7.5,
"texture": SubResource("AtlasTexture_rvghn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc68j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yq7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcu0q")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_bscm2")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_j6adl")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_3ifdw")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_x5fjy")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_on8ll")
}],
"loop": false,
"name": &"transition_out",
"speed": 25.0
}]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_0v7ca")

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u4m4g")
theme_override_styles/panel = SubResource("StyleBoxFlat_rss8y")
tabs_visible = false

[node name="MainTab" type="CenterContainer" parent="TabContainer"]
layout_mode = 2

[node name="MainTab" type="VBoxContainer" parent="TabContainer/MainTab"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_u4m4g")
alignment = 1

[node name="Label" type="Label" parent="TabContainer/MainTab/MainTab"]
layout_mode = 2
theme = ExtResource("1_u4m4g")
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="TabContainer/MainTab/MainTab"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../ReturnButton")
theme = ExtResource("1_u4m4g")
button_mask = 0
text = "Continue"

[node name="SettingsButton" type="Button" parent="TabContainer/MainTab/MainTab"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../ReturnButton")
theme = ExtResource("1_u4m4g")
button_mask = 0
text = "Settings"

[node name="ReturnButton" type="Button" parent="TabContainer/MainTab/MainTab"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../ContinueButton")
theme = ExtResource("1_u4m4g")
button_mask = 0
shortcut = SubResource("Shortcut_g7248")
shortcut_in_tooltip = false
text = "Return"

[node name="SettingsContainer" parent="TabContainer" instance=ExtResource("3_ckuse")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ConfirmTab" type="CenterContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="ConfirmTab" type="VBoxContainer" parent="TabContainer/ConfirmTab"]
layout_mode = 2
theme = ExtResource("1_u4m4g")

[node name="Label" type="Label" parent="TabContainer/ConfirmTab/ConfirmTab"]
custom_minimum_size = Vector2(336, 0)
layout_mode = 2
theme = ExtResource("1_u4m4g")
theme_override_font_sizes/font_size = 24
text = "Are you sure you want to return to the main menu? All your progress will be lost!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ConfirmReturnButton" type="Button" parent="TabContainer/ConfirmTab/ConfirmTab"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../DenyReturnButton")
theme = ExtResource("1_u4m4g")
button_mask = 0
shortcut = SubResource("Shortcut_d77ke")
shortcut_in_tooltip = false
text = "Yes"

[node name="DenyReturnButton" type="Button" parent="TabContainer/ConfirmTab/ConfirmTab"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_bottom = NodePath("../ConfirmReturnButton")
theme = ExtResource("1_u4m4g")
button_mask = 0
text = "No"

[node name="Transition" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TransitionSprite" type="AnimatedSprite2D" parent="Transition"]
unique_name_in_owner = true
visible = false
position = Vector2(168, 112)
sprite_frames = SubResource("SpriteFrames_0apyq")
animation = &"transition_in"

[connection signal="pressed" from="TabContainer/MainTab/MainTab/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="TabContainer/MainTab/MainTab/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="TabContainer/MainTab/MainTab/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="TabContainer/ConfirmTab/ConfirmTab/ConfirmReturnButton" to="." method="_on_confirm_return_button_pressed"]
[connection signal="pressed" from="TabContainer/ConfirmTab/ConfirmTab/DenyReturnButton" to="." method="_on_deny_return_button_pressed"]
